# set_up_debian_xfce_minimal

./: .gitignore  README.md  prepare_to_start.sh  pyproject.toml  start.py
.github/workflows/: codecov.yml  codecoverage.yml  pytest.yml
.prep/: install_dependencies.sh  install_python3_9.sh  set_up_sudo.sh
scripts/: .gitkeep  install_lightdm_2.sh  install_xfce_7.sh  install_xorg_1.sh  set_up_lightdm_as_default_3.sh  set_up_xfce_as_default_5.sh  set_up_xorg_as_default_4.sh  set_up_xsessionrc_6.py  update_apt-get_0.sh
src/: app.py  cli_utils.py  exceptions.py  module.py  process.py  script.py  script_executor.py  shell.py  temporary_errors_buffer.py
src/output_input_controllers/: base.py  controllers.py  descriptors.py  utils.py
tests/: config.py  conftest.py  test_0_script_name_class.py  test_1_script_class.py  test_2_module_class.py  test_3_output_input_controller.py  test_4_process.py  test_5_shell_class.py  test_6_temporary_errors_buffer.py  test_7_script_executor.py
tests/scripts/bad_scripts/: bash_echo_This_is_standard_notification.sh  bash_error.sh  bash_no_shebang.sh  create_file.sh
tests/scripts/good_scripts/: bash_error_3.sh  bash_input_1.sh  bash_no_output_2.sh  bash_output_4.sh  bash_shebang_0.sh
